Frontend/src/assets/mentorWallet.css
/* ... */
  
  .material-icons-outlined {
    font-family: 'Material Icons Outlined';
    font-weight: lighter;
    font-style: normal;
    font-size: 30px !important;
    line-height: 1;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    --webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
  }
  
  .material-icons-round {
    font-family: 'Material Icons Round';
    font-weight: normal;
    font-style: normal;
    font-size: 24px;
    line-height: 1;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    --webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
  }
  
  .material-icons-sharp {
    font-family: 'Material Icons Sharp';
    font-weight: normal;
    font-style: normal;
    font-size: 24px;
    line-height: 1;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    --webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
  }
  
  .material-icons-two-tone {
    font-family: 'Material Icons Two Tone';
    font-weight: normal;
    font-style: normal;
    font-size: 24px;
    line-height: 1;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    --webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
  }
  
  .sidebar-item-font {
    font-size: 16px;
    /* color: #999999 !important; */
  }
  
  .p-0 {
    border-bottom: none !important;
  }
  
  .badge {
    position: absolute;
    padding: .25rem .375rem;
    font-size: .5rem;
    left: 50%;
    top: -20% !important;
  }
  
  .badge-danger {
    color: #04B5FA;
    background-color: #04B5FA;
  }
  
  .user-type-active {
    height: 100%;
    display: flex;
    margin-left: 0px;
    margin-right: 0px;
    justify-content: center;
    align-items: center;
    align-content: center;
    font-size: 15px;
    padding: 20px;
    border-radius: 7px;
    color: #ffffff;
    border: 10px solid #04B5FA;
    background-color: #04B5FA;
  }
  
  .user-type-deactive {
    height: 100%;
    font-size: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
    align-content: center;
    padding: 20px;
  }
  
  .user-type-group {
    border: 2px solid #ACACAC;
    border-radius: 10px;
    align-items: center;
    justify-content: center;
    height: 90%;
  }
  
  .main-sidebar .nav .nav-item .nav-link.active, .main-sidebar .nav .nav-item .nav-link:hover, .main-sidebar .nav .nav-item.active, .main-sidebar .nav .nav-item:hover {
    background-color: #04B5FA;
    color: #FFFFFF;
    stroke: white !important;
    box-shadow: none;
  }
  
  .main-sidebar .nav .nav-item .nav-link.active i, .main-sidebar .nav .nav-item .nav-link:hover i, .main-sidebar .nav .nav-item.active i, .main-sidebar .nav .nav-item:hover i {
    color: #FFFFFF;
  }

  .main-sidebar-mentor .nav .nav-item .nav-link.active, .main-sidebar .nav .nav-item .nav-link:hover, .main-sidebar .nav .nav-item.active, .main-sidebar .nav .nav-item:hover {
    background-color: #018ac0;
    color: #FFFFFF;
    stroke: white !important;
    box-shadow: none;
  }
  
  .main-sidebar-mentor .nav .nav-item .nav-link.active i, .main-sidebar .nav .nav-item .nav-link:hover i, .main-sidebar .nav .nav-item.active i, .main-sidebar .nav .nav-item:hover i {
    color: #FFFFFF;
  }
  
  .main-navbar {
    height: 94px;
    padding-top: 20px;
    padding-left: 0px;
  }
  
  .main-sidebar-class {
    /* width: 14% !important; */
    box-shadow: 0.125rem 0 0.625rem rgba(90,97,105,.12);
    min-width: 260px;
  }
  
  .main-sidebar-item-icon-class svg{
    stroke: #999999;
    margin-bottom: 6px;
  }
  
  .main-sidebar-item-icon-class:hover svg{
    stroke: white;
  }
  
  .main-sidebar-item-icon-class.active svg{
    stroke: white;
  }
  
  .main-sidebar-item-icon-class div {
    padding-right: 10px;
  }
  
  @media (max-width: 1579px) and (min-width: 992px) {
    .main-content-class {
        margin-left: 260px;
        width: calc(100% - 260px) !important;
    }
  }
  
  @media (max-width: 650px) {
    .sidebar-main-navbar-class {
        display: none !important;
    }
  }
  
  @media (max-width: 767px) {
    .sidebar-main-navbar-class .main-navbar {
        padding-top: 0px !important;
    }
  }
  
  @media (max-width: 991px) {
    .main-sidebar-class {
        -webkit-transform: translateX(-100%);
        transform: translateX(-100%);
        box-shadow: none;
    }
    .main-sidebar-class.open {
        width: 100%;
        -webkit-transform: translateX(0);
        transform: translateX(0);
        box-shadow: 0 0.125rem 9.375rem rgba(90,97,105,.1), 0 0.25rem 0.5rem rgba(90,97,105,.12), 0 0.9375rem 1.375rem rgba(90,97,105,.1), 0 0.4375rem 2.1875rem rgba(165,182,201,.1);
    }
  }
  
  @media (min-width: 1580px) {
    .main-content-class {
        margin-left: 16.6666667%;
        width: 83.3333333 !important;
    }
  }
  
  .main-content-container-class {
    background-color: #F9F9F9;
    /* min-height: calc(100vh - 9.9rem) !important; */
  }
  
  .modal.show {
    z-index: 9000;
    pointer-events: none;
  }
  
  .small-card-class {
    border-radius: 1px;
  }
  
  .no-box-shadow {
    box-shadow: none;
  }
  
  .small-card-value-class {
    font-size: 30px;
    font-weight: bolder;
  }
  
  .small-card-value-class h6 {
    justify-content: center;
    align-items: center;
    display: flex;
  }
  
  .small-card-value-class span {
    justify-content: center;
    align-items: center;
    display: flex;
  }
  
  .small-card-label-class {
    font-size: 16px;
    font-weight: normal;
  }
  
  .small-card-content-class {
    display: grid;
    justify-content: center;
    align-items: center;
  }
/* ... */

